--- a/src/com/tj/civ/client/resources/CivBuddy.css
+++ b/src/com/tj/civ/client/resources/CivBuddy.css
@@ -56,7 +56,7 @@ body, table td, select {
 }
 
 /* a row in the card grid. This is the name of the base style, and postfixed
-   with a CcState, the name of the state-specific secondary style */
+   with a CbState, the name of the state-specific secondary style */
 .cc-row {
     vertical-align: top;
     border-top: 1px solid gray;
