--- a/src/com/tj/civ/client/resources/CivBuddy.css
+++ b/src/com/tj/civ/client/resources/CivBuddy.css
@@ -280,3 +280,64 @@ body, table td, select {
 .cc-marginBottom10 {
     margin-bottom: 10px;
 }
+
+
+/* - - - - -  CbCommoditySpinner widget  - - - - - */
+
+.cc-W-CommoditySpinner-outer {
+    width: 150px;
+    background-color: #f0f0ff;
+    margin: 0px 5px;    /* vert horz */
+    padding: 0;
+}
+
+.cc-W-CommoditySpinner-outer-wine {
+    width: 98px;
+    background-color: #f0f0ff;
+    margin: 0px 4px;    /* vert horz */
+    padding: 0;
+}
+
+.cc-W-CommoditySpinner-HP-Title {
+    width: 100%;
+    height: 22px;
+    line-height: 22px;
+    margin: 0;
+    padding: 0px 1px;    /* vert horz */
+    vertical-align: top;
+    overflow: visible;
+}
+
+.cc-W-CommoditySpinner-Lbl-Title {
+    margin: 0;
+    padding: 0;
+    text-shadow: gray 2px 2px 2px;
+    color: #000080;
+    font-variant: small-caps;
+}
+
+.cc-W-CommoditySpinner-Lbl-Title-disabled {
+    margin: 0;
+    padding: 0;
+    text-shadow: #e4e4ff 2px 2px 2px;
+    color: #c0c0ff;
+    font-variant: small-caps;
+}
+.cc-W-CommoditySpinner-Lbl-Base {
+    z-index: 2;  /* TODO TEMP should be -1 */
+    color: #e4e4ff;
+    font-weight: bold;
+    font-size: 3em;
+    vertical-align: top;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    top: 0.2em;
+}
+
+.cc-W-CommoditySpinner-Button {
+    z-index: 3;
+    width: 35px;
+    height: 40px;
+    font-size: 2em;
+}
