--- a/src/com/tj/civ/client/resources/CivBuddy.css
+++ b/src/com/tj/civ/client/resources/CivBuddy.css
@@ -21,7 +21,7 @@ body {
     padding: 0;
     background: url("background.gif");
     height: 100%;
-    width: auto;  /* 320px */
+    width: 100%;  /* 320px */
     min-width: 320px;
     max-width: 720px;
 }
@@ -29,7 +29,7 @@ body {
 .cb-AbstractListView-margin {
     /* margin for all abstract list views; used so that the title and bottom bars
        do not obscure part of the list */
-    margin: 33px 0 33px 0;  /* top right bottom left */
+    margin: 38px 0 38px 0;  /* top right bottom left */
     padding: 0;
 }
 
@@ -89,6 +89,86 @@ body {
 }
 
 
+/* ----- Page items in the list type views --------------------------------------- */
+
+.cb-pageitem {
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    border-radius: 8px;
+    background-color: white;
+    border: #878787 solid 1px;
+    font-size: 12pt;
+    overflow: hidden;
+    padding: 0;
+    position: relative;
+    margin: 3px 9px 17px;   /* top horz bottom */
+    display: block;
+    height: auto;
+    width: auto;
+}
+/*
+.cb-pageitem .textbox {
+    margin: 5px 9px 5px 30px;   / * top right bottom left * /
+    position: relative;
+    text-indent: -32px;
+}
+.cb-pageitem .textbox .header {
+    display: inline;
+    margin-left: 9px;
+    padding: 0;
+    font-weight: bold;
+    color: rgb(73,102,145);
+}
+
+.cb-pageitem .checkbox {
+    position: relative;
+    display: block;
+    height: 39px;
+    overflow: hidden;
+    width: auto;
+}
+.cb-pageitem .checkbox:first-child {
+    border-bottom: 1px solid #878787;
+}
+.cb-pageitem .checkbox .name {
+    margin: 11px 0 0 7px;   / * top right bottom left * /
+    width: auto;
+    color: black;
+    font-weight: bold;
+    font-size: 17px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    float: left;
+}
+.cb-pageitem .checkbox .switch {
+    width: 80px;
+    height: 23px;
+    background: url('../../iWebKit5.04/iWebKit%20demo/images/checkbox-sm.png');
+    border: 0;
+    float: right;
+    margin: 8px 8px 0 0;
+}
+.cb-pageitem .checkbox .switch-checked {
+    background-position: 0 23px;
+}
+*/
+.cb-pageitem .cb-general-listitem {
+    position: relative;
+    display: block;
+    height: 38px;
+    overflow: hidden;
+    width: auto;
+    margin: 0;
+    padding: 3px 9px;   /* vert horz */
+    border-top: 1px solid #878787;
+    cursor: default;
+}
+.cb-pageitem .cb-general-listitem:first-child {
+    border-top: none;
+}
+
+
 @external .gwt-DialogBox;
 .gwt-DialogBox {
     z-index: 10;   /* put in front of slider bar knob */
@@ -129,7 +209,9 @@ body {
 /* a row in the card grid. This is the name of the base style, and postfixed
    with a CbState, the name of the state-specific secondary style */
 .cc-row {
-    vertical-align: top;
+    vertical-align: middle;
+    text-align: center;
+    cursor: default;
     border-top: 1px solid gray;
 }
 .cc-row:hover {
@@ -200,24 +282,25 @@ body {
     table-layout: fixed;
     width: 16px;   /* same as the group icon height */
 }
-.cc-colMore {   /* the card grid cell with the 'more' button, also used for the div */
-    vertical-align: middle;
-    text-align: center;
-    margin: 0;
-    cursor: pointer;
+.cc-colMore {
+    /* deprecated */
 }
-.cc-colMore:hover {
-    font-size: large;
-}
-.cc-colMore:hover .cc-moreLabel {
-    margin: 3px 0px;   /* vert horz */
-}
-.cc-moreLabel {    /* the '>>' label */
-    margin: 5px 0px;   /* vert horz */
+.cb-moreArrowLabel {    /* the '>>' label */
+    padding-top: 8px;
     text-shadow: gray 2px 2px 3px;
     font-weight: bold;
     color: #5571b3;
     cursor: pointer;
+    position: absolute;
+    right: 2px;
+    top: 50%;
+    margin-top: -19px;
+    width: 28px;
+    height: 38px;
+    text-align: center;
+}
+.cb-moreArrowLabel:hover {
+    font-size: large;
 }
 
 @external .cc-tabPanelBottom;    /** TODO temp */
@@ -323,11 +406,16 @@ body {
 
 .cc-GameListEntry {
     height: 38px;
-    margin: 0;
-    cursor: default;
+    position: absolute;
+    margin-top: -19px;
+    padding: 0;
+    left: 25px;
+    top: 50%;
+    overflow: hidden;
 }
 .cc-GameListEntry .cc-GameName {
     color: black;
+    cursor: pointer;
 }
 .cc-GameListEntry .cc-Variant {
     color: gray;
@@ -343,12 +431,16 @@ body {
 }
 
 .cc-colMarker {
-    vertical-align: middle;
-    cursor: default;
-}
-.cc-listMarker {
-    color: black;
+    padding-top: 9px;
+    width: 25px;
+    height: 38px;
     text-align: center;
+    color: black;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    margin-top: -19px;
+    overflow: hidden;
 }
 
 .cc-marginBottom10 {
