--- a/src/com/tj/civ/client/resources/CivBuddy.css
+++ b/src/com/tj/civ/client/resources/CivBuddy.css
@@ -19,7 +19,7 @@ body {
     font-size: medium;
     margin: 0;
     padding: 0;
-    background: url("background.gif");   /* must use GIF, because Safari barfs on the PNG version */
+    background: url("images/background.gif");   /* must use GIF, because Safari barfs on the PNG version */
     height: 100%;
     width: 100%;  /* 320px */
     min-width: 320px;
@@ -209,6 +209,153 @@ body {
 }
 
 
+/* ----- Navigational Buttons in Title Bar --------------------------------------- */
+
+@external #cb-navright;
+#cb-navright {    /* this stanza is also used for IE */
+    position: absolute;
+    right: 9px;
+    top: 4px;
+    height: 24px;
+    line-height: 24px;
+    cursor: pointer;
+    z-index: 6;
+}
+#cb-navright .cb-buttontext {
+    -webkit-border-image: url("images/navbutton_rightlink.png") 0 13 0 5;
+    -moz-border-image: url("images/navbutton_rightlink.png") 0 13 0 5;
+    -o-border-image: url("images/navbutton_rightlink.png") 0 13 0 5;
+    z-index: 8;
+    margin-right: -4px;
+    border-width: 0 13px 0 5px;
+    padding-left: 4px;
+    -webkit-border-top-left-radius: 6px;
+    -moz-border-top-left-radius: 6px;
+    border-top-left-radius: 6px;
+    -webkit-border-bottom-left-radius: 6px;
+    -moz-border-bottom-left-radius: 6px;
+    border-bottom-left-radius: 6px;
+    float: right;
+    -webkit-border-top-right-radius: 16px;
+    -moz-border-top-right-radius: 16px;
+    border-top-right-radius: 16px;
+    -webkit-border-bottom-right-radius: 16px;
+    -moz-border-bottom-right-radius: 16px;
+    border-bottom-right-radius: 16px;
+    font-size: 12px;
+    font-weight: bold;
+    display: block;
+    color: white;
+    text-shadow: rgba(0,0,0,0.6) 0 -1px 0;
+    text-decoration: none;
+}
+#cb-navright .cb-buttontext:hover {
+    -webkit-border-image: url("images/navbutton_rightlink_bright.png") 0 13 0 5;
+    -moz-border-image: url("images/navbutton_rightlink_bright.png") 0 13 0 5;
+    -o-border-image: url("images/navbutton_rightlink_bright.png") 0 13 0 5;
+}
+#cb-navright .cb-buttontext:first-child {
+    z-index: 7;
+    -webkit-border-top-left-radius: 6px;
+    -moz-border-top-left-radius: 6px;
+    border-top-left-radius: 6px;
+    -webkit-border-bottom-left-radius: 6px;
+    -moz-border-bottom-left-radius: 6px;
+    border-bottom-left-radius: 6px;
+    -webkit-border-image: url("images/navbutton_right.png") 0 13 0 5;
+    -moz-border-image: url("images/navbutton_right.png") 0 13 0 5;
+    -o-border-image: url("images/navbutton_right.png") 0 13 0 5;
+    border-width: 0 13px 0 5px;
+    -webkit-border-top-right-radius: 16px;
+    -moz-border-top-right-radius: 16px;
+    border-top-right-radius: 16px;
+    -webkit-border-bottom-right-radius: 16px;
+    -moz-border-bottom-right-radius: 16px;
+    border-bottom-right-radius: 16px;
+}
+#cb-navright .cb-buttontext:first-child:hover {
+    -webkit-border-image: url("images/navbutton_right_bright.png") 0 13 0 5;
+    -moz-border-image: url("images/navbutton_right_bright.png") 0 13 0 5;
+    -o-border-image: url("images/navbutton_right_bright.png") 0 13 0 5;
+}
+
+#cb-navleft img, #cb-navright img {
+    margin-top: 4px;
+    height: 70%;
+    border-width: 0;
+}
+
+@external #cb-navleft;
+#cb-navleft {    /* this stanza is also used for IE */
+    position: absolute;
+    left: 9px;
+    top: 4px;
+    height: 24px;
+    line-height: 24px;
+    cursor: pointer;
+    z-index: 6;
+}
+#cb-navleft .cb-buttontext {
+    -webkit-border-image: url("images/navbutton_leftlink.png") 0 5 0 13;
+    -moz-border-image: url("images/navbutton_leftlink.png") 0 5 0 13;
+    -o-border-image: url("images/navbutton_leftlink.png") 0 5 0 13;
+    z-index: 8;
+    margin-left: -4px;
+    border-width: 0 5px 0 13px;
+    padding-right: 4px;
+    -webkit-border-top-left-radius: 16px;
+    -moz-border-top-left-radius: 16px;
+    border-top-left-radius: 16px;
+    -webkit-border-bottom-left-radius: 16px;
+    -moz-border-bottom-left-radius: 16px;
+    border-bottom-left-radius: 16px;
+    -webkit-border-top-right-radius: 6px;
+    -moz-border-top-right-radius: 6px;
+    border-top-right-radius: 6px;
+    -webkit-border-bottom-right-radius: 6px;
+    -moz-border-bottom-right-radius: 6px;
+    border-bottom-right-radius: 6px;
+    float: left;
+    font-size: 12px;
+    font-weight: bold;
+    display: block;
+    color: white;
+    text-shadow: rgba(0,0,0,0.6) 0 -1px 0;
+    text-decoration: none;
+}
+#cb-navleft .cb-buttontext:hover {
+    -webkit-border-image: url("images/navbutton_leftlink_bright.png") 0 5 0 13;
+    -moz-border-image: url("images/navbutton_leftlink_bright.png") 0 5 0 13;
+    -o-border-image: url("images/navbutton_leftlink_bright.png") 0 5 0 13;
+}
+#cb-navleft .cb-buttontext:first-child {
+    z-index: 7;
+    -webkit-border-image: url("images/navbutton_left.png") 0 5 0 13;
+    -moz-border-image: url("images/navbutton_left.png") 0 5 0 13;
+    -o-border-image: url("images/navbutton_left.png") 0 5 0 13;
+    border-width: 0 5px 0 13px;
+    -webkit-border-top-left-radius: 16px;
+    -moz-border-top-left-radius: 16px;
+    border-top-left-radius: 16px;
+    -webkit-border-bottom-left-radius: 16px;
+    -moz-border-bottom-left-radius: 16px;
+    border-bottom-left-radius: 16px;
+    -webkit-border-top-right-radius: 6px;
+    -moz-border-top-right-radius: 6px;
+    border-top-right-radius: 6px;
+    -webkit-border-bottom-right-radius: 6px;
+    -moz-border-bottom-right-radius: 6px;
+    border-bottom-right-radius: 6px;
+    width: auto;
+}
+#cb-navleft .cb-buttontext:first-child:hover {
+    -webkit-border-image: url("images/navbutton_left_bright.png") 0 5 0 13;
+    -moz-border-image: url("images/navbutton_left_bright.png") 0 5 0 13;
+    -o-border-image: url("images/navbutton_left_bright.png") 0 5 0 13;
+}
+
+
+
 @external .gwt-DialogBox;
 .gwt-DialogBox {
     z-index: 10;   /* put in front of slider bar knob */
@@ -228,10 +375,7 @@ body {
 }
 .cb-creditBar .cc-imgCreditBar {   /* a single image in the credit bar */
     margin: 0 1px 0 0;   /* top right bottom left */
-    padding: 0px;  /*
-    -moz-box-shadow: -1px -1px #e0e0e0;
-    -webkit-box-shadow: -1px -1px #e0e0e0;
-    box-shadow: -1px -1px #e0e0e0; */
+    padding: 0px;
 }
 
 .cc-grid {  /* the card grid itself */
