--- a/src/com/tj/civ/client/resources/CivBuddy.css
+++ b/src/com/tj/civ/client/resources/CivBuddy.css
@@ -71,15 +71,41 @@ body {
 .cb-extrabar, .cb-bottombar {
     border-color: #808080;
     border-style: solid;
+    cursor: default;
 }
 .cb-extrabar {
     top: 32px;
-    line-height: 43px;
-    height: 43px;
+    line-height: 42px;
+    height: 42px;
     border-width: 0 0 1px 0;   /* top right bottom left */
 }
 @external .cb-extrabar-gradient;
 
+.cb-extrabar .cb-northwest, .cb-extrabar .cb-northeast,
+.cb-extrabar .cb-southwest, .cb-extrabar .cb-southeast {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    height: 21px;
+    line-height: 21px;
+    width: auto;
+}
+.cb-extrabar .cb-northwest {
+    top: 0;
+    left: 0;
+}
+.cb-extrabar .cb-northeast {
+    top: 0;
+    right: 0;
+}
+.cb-extrabar .cb-southwest {
+    bottom: 0;
+    left: 0;
+}
+.cb-extrabar .cb-southeast {
+    bottom: 0;
+    right: 0;
+}
 
 /* ----- Bottom Bar -------------------------------------------------------------- */
 
@@ -102,7 +128,7 @@ body {
     overflow: hidden;
     padding: 0;
     position: relative;
-    margin: 3px 9px 17px;   /* top horz bottom */
+    margin: 6px;
     display: block;
     height: auto;
     width: auto;
@@ -154,15 +180,14 @@ body {
     background-position: 0 23px;
 }
 */
-.cb-pageitem .cb-general-listitem {
+.cb-pageitem .cb-general-listitem {   /* a "row" in the list */
     position: relative;
     display: block;
-    height: 38px;
-    overflow: hidden;
     width: auto;
     margin: 0;
     padding: 3px 9px;   /* vert horz */
     border-top: 1px solid #878787;
+    overflow: hidden;
     cursor: default;
 }
 .cb-pageitem .cb-general-listitem:first-child {
@@ -221,10 +246,8 @@ body.enableCssHover #cb-iconbutton-right:hover {
     cursor: pointer;
     z-index: 6;
 }
-#cb-navright .cb-buttontext {
-    -webkit-border-image: url("images/navbutton_rightlink.png") 0 13 0 5;
-    -moz-border-image: url("images/navbutton_rightlink.png") 0 13 0 5;
-    -o-border-image: url("images/navbutton_rightlink.png") 0 13 0 5;
+#cb-navright .cb-buttontext,
+#cb-navright .cb-buttontext-disabled {
     z-index: 8;
     margin-right: -4px;
     border-width: 0 13px 0 5px;
@@ -245,16 +268,30 @@ body.enableCssHover #cb-iconbutton-right:hover {
     font-size: 12px;
     font-weight: bold;
     display: block;
+    text-decoration: none;
+}
+#cb-navright .cb-buttontext {
     color: white;
     text-shadow: rgba(0,0,0,0.6) 0 -1px 0;
-    text-decoration: none;
+    -webkit-border-image: url("images/navbutton_rightlink.png") 0 13 0 5;
+    -moz-border-image: url("images/navbutton_rightlink.png") 0 13 0 5;
+    -o-border-image: url("images/navbutton_rightlink.png") 0 13 0 5;
+}
+#cb-navright .cb-buttontext-disabled {
+    color: #889bb3;
+    text-shadow: rgba(0,0,0,0.4) 0 -1px 0;
+    -webkit-border-image: url("images/navbutton_rightlink_disabled.png") 0 13 0 5;
+    -moz-border-image: url("images/navbutton_rightlink_disabled.png") 0 13 0 5;
+    -o-border-image: url("images/navbutton_rightlink_disabled.png") 0 13 0 5;
+    cursor: default;
 }
 body.enableCssHover #cb-navright .cb-buttontext:hover {
     -webkit-border-image: url("images/navbutton_rightlink_bright.png") 0 13 0 5;
     -moz-border-image: url("images/navbutton_rightlink_bright.png") 0 13 0 5;
     -o-border-image: url("images/navbutton_rightlink_bright.png") 0 13 0 5;
 }
-#cb-navright .cb-buttontext:first-child {
+#cb-navright .cb-buttontext:first-child,
+#cb-navright .cb-buttontext-disabled:first-child {
     z-index: 7;
     -webkit-border-top-left-radius: 6px;
     -moz-border-top-left-radius: 6px;
@@ -262,9 +299,6 @@ body.enableCssHover #cb-navright .cb-buttontext:hover {
     -webkit-border-bottom-left-radius: 6px;
     -moz-border-bottom-left-radius: 6px;
     border-bottom-left-radius: 6px;
-    -webkit-border-image: url("images/navbutton_right.png") 0 13 0 5;
-    -moz-border-image: url("images/navbutton_right.png") 0 13 0 5;
-    -o-border-image: url("images/navbutton_right.png") 0 13 0 5;
     border-width: 0 13px 0 5px;
     -webkit-border-top-right-radius: 16px;
     -moz-border-top-right-radius: 16px;
@@ -273,6 +307,21 @@ body.enableCssHover #cb-navright .cb-buttontext:hover {
     -moz-border-bottom-right-radius: 16px;
     border-bottom-right-radius: 16px;
 }
+#cb-navright .cb-buttontext:first-child {
+    color: white;
+    text-shadow: rgba(0,0,0,0.6) 0 -1px 0;
+    -webkit-border-image: url("images/navbutton_right.png") 0 13 0 5;
+    -moz-border-image: url("images/navbutton_right.png") 0 13 0 5;
+    -o-border-image: url("images/navbutton_right.png") 0 13 0 5;
+}
+#cb-navright .cb-buttontext-disabled:first-child {
+    color: #889bb3;
+    text-shadow: rgba(0,0,0,0.4) 0 -1px 0;
+    -webkit-border-image: url("images/navbutton_right_disabled.png") 0 13 0 5;
+    -moz-border-image: url("images/navbutton_right_disabled.png") 0 13 0 5;
+    -o-border-image: url("images/navbutton_right_disabled.png") 0 13 0 5;
+    cursor: default;
+}
 body.enableCssHover #cb-navright .cb-buttontext:first-child:hover {
     -webkit-border-image: url("images/navbutton_right_bright.png") 0 13 0 5;
     -moz-border-image: url("images/navbutton_right_bright.png") 0 13 0 5;
@@ -280,8 +329,8 @@ body.enableCssHover #cb-navright .cb-buttontext:first-child:hover {
 }
 
 #cb-navleft img, #cb-navright img {
-    margin-top: 4px;
-    height: 70%;
+    margin: 4px 0 0 0;
+    padding: 0;
     border-width: 0;
 }
 
@@ -295,10 +344,8 @@ body.enableCssHover #cb-navright .cb-buttontext:first-child:hover {
     cursor: pointer;
     z-index: 6;
 }
-#cb-navleft .cb-buttontext {
-    -webkit-border-image: url("images/navbutton_leftlink.png") 0 5 0 13;
-    -moz-border-image: url("images/navbutton_leftlink.png") 0 5 0 13;
-    -o-border-image: url("images/navbutton_leftlink.png") 0 5 0 13;
+#cb-navleft .cb-buttontext,
+#cb-navleft .cb-buttontext-disabled {
     z-index: 8;
     margin-left: -4px;
     border-width: 0 5px 0 13px;
@@ -319,20 +366,32 @@ body.enableCssHover #cb-navright .cb-buttontext:first-child:hover {
     font-size: 12px;
     font-weight: bold;
     display: block;
+    text-decoration: none;
+    height: 24px;
+}
+#cb-navleft .cb-buttontext {
     color: white;
     text-shadow: rgba(0,0,0,0.6) 0 -1px 0;
-    text-decoration: none;
+    -webkit-border-image: url("images/navbutton_leftlink.png") 0 5 0 13;
+    -moz-border-image: url("images/navbutton_leftlink.png") 0 5 0 13;
+    -o-border-image: url("images/navbutton_leftlink.png") 0 5 0 13;
+}
+#cb-navleft .cb-buttontext-disabled {
+    color: #889bb3;
+    text-shadow: rgba(0,0,0,0.4) 0 -1px 0;
+    -webkit-border-image: url("images/navbutton_leftlink_disabled.png") 0 5 0 13;
+    -moz-border-image: url("images/navbutton_leftlink_disabled.png") 0 5 0 13;
+    -o-border-image: url("images/navbutton_leftlink_disabled.png") 0 5 0 13;
+    cursor: default;
 }
 body.enableCssHover #cb-navleft .cb-buttontext:hover {
     -webkit-border-image: url("images/navbutton_leftlink_bright.png") 0 5 0 13;
     -moz-border-image: url("images/navbutton_leftlink_bright.png") 0 5 0 13;
     -o-border-image: url("images/navbutton_leftlink_bright.png") 0 5 0 13;
 }
-#cb-navleft .cb-buttontext:first-child {
+#cb-navleft .cb-buttontext:first-child,
+#cb-navleft .cb-buttontext-disabled:first-child {
     z-index: 7;
-    -webkit-border-image: url("images/navbutton_left.png") 0 5 0 13;
-    -moz-border-image: url("images/navbutton_left.png") 0 5 0 13;
-    -o-border-image: url("images/navbutton_left.png") 0 5 0 13;
     border-width: 0 5px 0 13px;
     -webkit-border-top-left-radius: 16px;
     -moz-border-top-left-radius: 16px;
@@ -347,6 +406,22 @@ body.enableCssHover #cb-navleft .cb-buttontext:hover {
     -moz-border-bottom-right-radius: 6px;
     border-bottom-right-radius: 6px;
     width: auto;
+    height: 24px;
+}
+#cb-navleft .cb-buttontext:first-child {
+    color: white;
+    text-shadow: rgba(0,0,0,0.6) 0 -1px 0;
+    -webkit-border-image: url("images/navbutton_left.png") 0 5 0 13;
+    -moz-border-image: url("images/navbutton_left.png") 0 5 0 13;
+    -o-border-image: url("images/navbutton_left.png") 0 5 0 13;
+}
+#cb-navleft .cb-buttontext-disabled:first-child {
+    color: #889bb3;
+    text-shadow: rgba(0,0,0,0.4) 0 -1px 0;
+    -webkit-border-image: url("images/navbutton_left_disabled.png") 0 5 0 13;
+    -moz-border-image: url("images/navbutton_left_disabled.png") 0 5 0 13;
+    -o-border-image: url("images/navbutton_left_disabled.png") 0 5 0 13;
+    cursor: default;
 }
 body.enableCssHover #cb-navleft .cb-buttontext:first-child:hover {
     -webkit-border-image: url("images/navbutton_left_bright.png") 0 5 0 13;
@@ -355,27 +430,143 @@ body.enableCssHover #cb-navleft .cb-buttontext:first-child:hover {
 }
 
 
+/* ----- Cards Widget in 'Cards' View -------------------------------------------- */
+
+.cb-cw-outerDiv {   /* the outermost <div> of the widget */
+    margin: 0;
+    padding: 0;
+    position: relative;
+    top: 0;
+    left: 0;
+    height: 38px;
+    width: auto;
+    min-width: 290px;
+    cursor: default;
+}
+.cb-cw-outerDiv .cb-cw-stateIconDiv {   /* the <div> around the card state <img> */
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    width: 24px;
+    height: 30px;
+    line-height: 30px;
+    top: 4px;
+    left: 0;
+}
+.cb-cw-outerDiv .cb-cw-GrpIcons {   /* the card group icon <div> */
+    padding: 0;
+    margin: 0;
+    width: 16px;   /* same as the group icon height */
+    height: 34px;
+    line-height: 34px;
+    position: absolute;
+    left: 29px;
+    top: 2px;
+}
+.cb-cw-outerDiv .cb-cw-GrpIcons .cb-cw-grpIcon1,
+.cb-cw-outerDiv .cb-cw-GrpIcons .cb-cw-grpIcon2 {
+    /* margin-bottom: 1px; */
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    left: 0;
+    width: 16px;
+    height: 16px;
+    line-height: 16px;
+}
+.cb-cw-outerDiv .cb-cw-GrpIcons .cb-cw-grpIcon1 {
+    top: 0;
+}
+.cb-cw-outerDiv .cb-cw-GrpIcons .cb-cw-grpIcon2 {
+    top: 18px;
+}
+.cb-cw-outerDiv .cb-cw-p3 {
+    height: 38px;
+    width: auto;
+    /* min-width: 226px; */
+    padding: 0 30px 0 47px;   /* top right bottom left */
+    margin: 0;
+    position: relative;
+}
+.cb-cw-outerDiv .cb-cw-cardName {
+    position: relative;
+    top: 0;
+    left: 0;
+    font-weight: bold;
+    width: auto;
+}
+.cb-cw-outerDiv .cb-cw-creditBar {
+    padding: 0;
+    margin: 3px 0 0 0;
+    height: 11px;
+    line-height: 11px;
+    width: auto;
+    position: relative;
+    bottom: 0;
+    left: 0;
+    white-space: nowrap;
+}
+.cb-cw-outerDiv .cb-cw-creditBar .cb-cw-creditBar-img {   /* a credit bar fragment */
+    margin: 0 1px 0 0;   /* top right bottom left */
+    padding: 0;
+}
+.cb-cw-outerDiv .cb-cw-CostIndicator {  /* the card cost indicator in the card grid (including nominal cost) */
+    margin: 0;
+    padding: 0;
+    white-space: nowrap;
+    position: absolute;
+    right: 30px;
+    top: 0;
+}
+.cb-cw-outerDiv .cb-cw-CostIndicator .cb-cw-CostNominal {  /* the card's nominal cost value in the card grid */
+    font-weight: bold;
+}
+
+
+/* ----- 'Cards' View ------------------------------------------------------------ */
+
+.cb-CardsView-margin {
+    /* the title bar, extra bar, and bottom bar should not obscure part of the list */
+    padding: 74px 0 32px 0;  /* top right bottom left */
+    margin: 0;
+}
+
+.cb-CardsView-stateUnaffordable {
+    background-color: #f8f8ff; 
+    color: #6d84a2;
+}
+.cb-CardsView-stateDiscouragedBuy {
+    background-color: #fff8f8; 
+    color: red;
+}
+.cb-CardsView-stateDiscouragedBuy .cb-cw-outerDiv .cb-cw-cardName {
+    color: red;
+}
+.cb-CardsView-statePrereqFailed {
+    background-color: lightgray;
+    color: gray;
+}
+.cb-CardsView-statePrereqFailed .cb-cw-outerDiv .cb-cw-cardName {
+    color: gray;
+}
+body.enableCssHover .cb-CardsView-statePrereqFailed:hover {
+    /* disable hover by reversing its effects */
+    background-color: lightgray !important;
+}
 
 @external .gwt-DialogBox;
 .gwt-DialogBox {
-    z-index: 10;   /* put in front of slider bar knob */
+    z-index: 20;   /* put in front of slider bar knob */
+}
+@external .gwt-PopupPanelGlass;
+.gwt-PopupPanelGlass {
+    z-index: 19;   /* put in front of slider bar knob */
 }
 
 @external .gwt-ToggleButton;
 .gwt-ToggleButton {
     width: 30px;
     text-align: center;
-}
-
-.cb-creditBar {
-	padding: 0;
-	margin: 1px 0 5px 0;   /* top right bottom left */
-	height: 11px;
-	line-height: 11px;
-}
-.cb-creditBar .cc-imgCreditBar {   /* a single image in the credit bar */
-    margin: 0 1px 0 0;   /* top right bottom left */
-    padding: 0px;
 }
 
 .cc-grid {  /* the card grid itself */
@@ -403,88 +594,41 @@ body.enableCssHover .cc-row:hover {
     border-bottom: 1px solid green;
     background-color: #F8FFF8;
 }
-.cc-rowOwned {
-    background-color: white;
-}
-.cc-rowPlanned {
-    background-color: white;
-}
-.cc-rowAbsent {
-    background-color: white;
-}
-.cc-rowUnaffordable {
-    background-color: #F8F8F8; 
-    color: gray;
-}
-.cc-rowPrereqFailed {
-    background-color: lightgray;
-    color: gray;
-}
-body.enableCssHover .cc-rowPrereqFailed:hover {   /* disable hover by reversing its effects */
-    border-top: 1px solid gray;
-    border-bottom: 1px solid gray;
-    background-color: lightgray;
-}
-.cc-rowDiscouragedBuy {
-    background-color: #F8F8F8; 
-}
-.cc-rowDiscouragedBuy .cc-cardName {
-    color: red;
-}
 
-.cc-cardName {   /* the card name in the card grid */
-    cursor: default;
-    font-weight: bold;
-}
-.cc-CostIndicator {  /* the card cost indicator in the card grid (including nominal cost) */
-    text-align: right;
-    margin-right: 10px;
-    cursor: default;
-}
-.cc-CostIndicator .cc-CostNominal {  /* the card's nominal cost value in the card grid */
-    font-weight: bold;
-}
-.cc-colState {   /* the card grid cell with the state indicator, also used for the widget */
-    vertical-align: middle;
-    text-align: center;
-    font-size: x-large;
-    font-weight: normal;
-    text-shadow: gray 1px 1px 2px;
-    color: #00A000;
-    cursor: default;
-    margin: 0;
-}
 .cc-colGrpIcons {
     text-align: right;
     vertical-align: top;
     padding: 4px 4px 0px 4px;  /* top right bottom left */
     line-height: 16px;   /* same as the group icon height */
 }
-.cc-panelGrpIcons {   /* the card grid group icon panel (not the cell) */
-    padding: 0px;
-    margin: 0px;
-    table-layout: fixed;
-    width: 16px;   /* same as the group icon height */
-}
 .cc-colMore {
     /* deprecated */
 }
-.cb-moreArrowLabel {    /* the '>>' label */
-    padding-top: 8px;
-    text-shadow: gray 2px 2px 3px;
-    font-weight: bold;
-    color: #5571b3;
+.cb-moreArrowLabel {    /* the '>>' label widget */
+    padding: 0;
+    margin: 0;
     cursor: pointer;
     position: absolute;
     right: 2px;
-    top: 50%;
-    margin-top: -19px;
+    top: 3px;
     width: 28px;
     height: 38px;
-    text-align: center;
 }
 body.enableCssHover .cb-moreArrowLabel:hover {
-    font-size: large;
+    font-size: larger;
+}
+.cb-moreArrowLabel-smaller {   /* for AbstractListView */
+    height: 32px;
+}
+.cb-moreArrowLabel .cb-moreArrowLabel-text {    /* the '>>' label text */
+    padding: 0;
+    text-shadow: gray 2px 2px 3px;
+    font-weight: bold;
+    color: #5571b3;
+    position: absolute;
+    left: 4px;
+    top: 50%;
+    margin-top: -10px;  /* half this div's height; TODO: use icon for precise positioning */
 }
 
 .cb-bgtitle {      /* header text written onto the striped background */
@@ -558,17 +702,6 @@ body.enableCssHover .cb-moreArrowLabel:hover {
     cursor: wait;  /* TODO: verbotsschild */
 }
 
-.cc-Stats {  /* the statistics panel on the cards tab */
-    width: 100%;
-    cursor: default;
-    margin: 0;
-}
-.cc-Stats .cc-StatsInner {  /* the panels within the statistics panel on the cards tab */
-    /* gets background from .cc-blueGradient on html host page */
-    width: 100%;
-    cursor: default;
-    padding: 0px 3px 1px 2px;  /* top right bottom left */
-}
 .cc-StatsIndicator {
     color: black;
 }
@@ -612,30 +745,38 @@ body.enableCssHover .cb-moreArrowLabel:hover {
     cursor: default;
 }
 
+.cb-DisplayWidget-wrapper {
+    margin: 0;
+    padding: 0;
+    height: 32px;
+    line-height: 32px;
+    width: auto;
+    position: relative;
+    top: 0;
+    left: 24px;
+}
 .cb-DisplayWidget-1line {
     height: 18px;
+    line-height: 18px;
     position: absolute;
     margin-top: -9px;
     padding: 0;
-    left: 31px;
+    left: 0;
     top: 50%;
-    overflow: hidden;
 }
 .cb-DisplayWidget-2line {
-    height: 38px;
-    position: absolute;
-    margin-top: -19px;
+    height: 32px;
+    line-height: 16px;
+    margin: 0;
     padding: 0;
-    left: 31px;
-    top: 50%;
-    overflow: hidden;
+    position: relative;
 }
 .cb-DisplayWidget-2line .cc-GameName {
     color: black;
 }
 .cb-DisplayWidget-2line .cc-Variant {
     color: gray;
-    font-size: small;
+    font-size: smaller;
 }
 
 .cc-emptyListLabel {
@@ -647,13 +788,12 @@ body.enableCssHover .cb-moreArrowLabel:hover {
 }
 
 .cc-colMarker {
-    padding: 9px 2px;   /* vert horz */
+    margin: 0;
+    padding: 0;
     position: absolute;
-    top: 50%;
+    top: 9px;   /* (38px (row height) - 20px (marker height)) / 2 */
     left: 3px;
-    margin-top: -10px;
     cursor: pointer;
-    overflow: hidden;
 }
 
 .cc-marginBottom10 {
